# cleaner_qt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  deploy.bat  deploy.ps1  diagnose.ps1  main.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
app/: app.manifest
installer/: cleaner_qt.iss
qml/: main.qml  resources.qrc
qml/components/: AllFilesView.qml  CleanupHub.qml  CleanupResultsPanel.qml  DiskSelector.qml  DuplicateView.qml  ExtensionStatsPanel.qml  FileListView.qml  FileWatcherView.qml  FolderTreeView.qml  MessageBanner.qml  PathSelector.qml  ScanProgress.qml  SearchField.qml  SettingsDialog.qml  SizeBarDelegate.qml  SunburstView.qml  ThemedListRow.qml  ThemedPanel.qml  ThemedProgressBar.qml  ThemedSectionTitle.qml  TopFilesPanel.qml  TreemapView.qml  qmldir
scripts/: capture-screenshots.ps1  capture_screenshots.py  deploy.ps1  set-repo-metadata.ps1  test.ps1
src/: AnalyzerController.cpp  AnalyzerController.h  CleanerController.cpp  CleanerController.h  DiskScanner.cpp  DiskScanner.h  FileInfo.h
src/cli/: CliRunner.cpp  CliRunner.h
src/logging/: AppLogger.cpp  AppLogger.h  QtMessageHandler.cpp
src/models/: ExtensionColorMap.cpp  ExtensionColorMap.h  ExtensionStatsAggregator.cpp  ExtensionStatsAggregator.h  FileIndexBuilder.cpp  FileIndexBuilder.h  FileIndexEntry.h  FileIndexModel.cpp  FileIndexModel.h  FolderNode.cpp  FolderNode.h  FolderTreeModel.cpp  FolderTreeModel.h  HardlinkRegistry.cpp  HardlinkRegistry.h  ScanSnapshot.cpp  ScanSnapshot.h  TopFilesTracker.cpp  TopFilesTracker.h  TreemapLayout.cpp  TreemapLayout.h
src/platform/: AutoUpdateChecker.cpp  AutoUpdateChecker.h  FileDeleter_win.cpp  FileDeleter_win.h  FileIdHelper_win.cpp  FileIdHelper_win.h  FileWatcherService_win.cpp  FileWatcherService_win.h  UacHelper_win.cpp  UacHelper_win.h
src/scan/: CleanupScanners.cpp  CleanupScanners.h  NtfsMftDirectReader_win.cpp  NtfsMftDirectReader_win.h  NtfsMftScanWorker.cpp  NtfsMftScanWorker.h  NtfsMftScanner_win.cpp  NtfsMftScanner_win.h  ParallelScanWorker.cpp  ParallelScanWorker.h  ReportExporter.cpp  ReportExporter.h  ScanFileRecorder.h  ScanOptions.cpp  ScanOptions.h  ScanWorker.cpp  ScanWorker.h
src/scan/modules/: ScanModule.h  ScanModuleRegistry.cpp
src/settings/: AppSettings.cpp  AppSettings.h
src/ui/: ThemeManager.cpp  ThemeManager.h
src/util/: FormatUtils.cpp  FormatUtils.h
tests/: CMakeLists.txt  run_cli_smoke.cmake  test_app_logger.cpp  test_app_settings.cpp  test_cleanup_scanners.cpp  test_extension_color_map.cpp  test_extension_stats.cpp  test_file_index_builder.cpp  test_file_index_model.cpp  test_folder_tree.cpp  test_folder_tree_model.cpp  test_format_utils.cpp  test_hardlink_registry.cpp  test_report_exporter.cpp  test_scan_module_registry.cpp  test_scan_options.cpp  test_scan_snapshot.cpp  test_scan_worker.cpp  test_theme_manager.cpp  test_top_files_tracker.cpp  test_treemap_layout.cpp
tests/benchmark/: README.md
